tests/traci/variable_subscription/errors/UnknownVariable/testclient_out.traci
TraCITestClient output file. Date: Fri Aug 16 10:37:40 2019


-> Command sent: <SimulationStep>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SubscribeVariable>:
  domID=212 objID=0 with 1 variables
.. Answered with error to command (212), [description: Could not add subscription. Get Vehicle Variable: unsupported variable 0xff specified]

-> Command sent: <SimulationStep>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: ]
